# Canadian_Workforce_Skill_Analysis

./: .gitignore  DATA_LICENSE  README.md  pyproject.toml
inference/: README.md  analyze_stem_bhase_skills.py  combine_stem_bhase_skill_analysis.py  public_entity_linker.py  visualize_stem_bhase_skill_analysis.py
inference/files/: skills_ca.csv
preprocessor/: README.md  build_skills_ca_runtime.py  find_unique_programs.py  process_alternative_titles.py  process_canadian_skills.py  process_career_data.py  run_all.py
preprocessor/cleanedData/: alternativeTitleCa.csv  skillsCa.csv
preprocessor/rawData/: alternativeTitle.csv  candianSkills.csv
