[tool.poetry]
name = "tabiya-livelihoods-classifier"
version = "0.0.0"
description = ""
license = "MIT"
authors = ["Tabiya <tabiya@tabiya.org>"]
readme = "README.md"
packages = [
    { include = "inference" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas= "^2.0.3"
sentence_transformers= "^2.2.2"
torch= "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
